--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -2,14 +2,20 @@ spring:
   application:
     name: gateway
 
-  cloud:
-    loadbalancer:
-      cache:
-        enabled: false
-
 eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka:8761/eureka
   instance:
     lease-renewal-interval-in-seconds: 30
+
+resilience4j.retry:
+  instances:
+    service:
+      maxRetryAttempts: 5
+      waitDuration: 1000 #in milliseconds
+
+
+feign:
+  circuitbreaker:
+    enabled: true
